Time: 24 ms (32.72%) | Memory: 42.9 MB (27.91%) - LeetSync